fix(db): connection issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=@spring.profiles.active@
 server.port=8080
-spring.datasource.url=jdbc:postgresql://localhost:5432/persons?serverTimezone=UTC
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?serverTimezone=UTC
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
