--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,25 @@ jobs:
         with:
           fetch-depth: 0
 
+
       # TODO build, test and deploy project
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
+      - name: Build project
+        uses: eskatos/gradle-command-action@v1
+        with:
+          dependencies-cache-enabled: true
+          arguments: clean build
+
+      - name: Deploy project
+        uses: akhileshns/heroku-deploy@v3.4.6
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: rsoi-lab01-shemich
+          heroku_email: bazzzalex@mail.ru
+          usedocker: true
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
