--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -12,9 +12,8 @@ jobs:
         with:
           fetch-depth: 0
 
-      # TODO build, test and deploy project
       - name: Setup JDK
-      - uses: actions/setup-java@v1
+        uses: actions/setup-java@v1
         with:
           java-version: 11
 
