--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -12,16 +12,14 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Autograding
+        uses: education/autograding@v1
+        continue-on-error: true
+
       - name: Setup JDK
         uses: actions/setup-java@v1
         with:
           java-version: 11
-
-      - name: Build project
-        uses: eskatos/gradle-command-action@v1
-        with:
-          dependencies-cache-enabled: true
-          arguments: clean build
 
       - name: Setup gradle
         uses: gradle/gradle-build-action@v2
@@ -33,8 +31,8 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: rsoi-lab01-shemich
-          heroku_email: bazzzalex@mail.ru
+          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+          heroku_email: ${{secrets.HEROKU_USER_EMAIL}}
           usedocker: true
 
       - name: Upload coverage to Codecov
@@ -48,10 +46,6 @@ jobs:
           environment: postman/[inst][heroku] Lab1.postman_environment.json
           delayRequest: 50
           reporters: cli
-
-      - name: Autograding
-        uses: education/autograding@v1
-        continue-on-error: true
 
       - name: Github auto grader mark
         uses: Romanow/google-sheet-autograder-marker@v1.0
