--- a/.gitignore
+++ b/.gitignore
@@ -218,7 +218,7 @@ build-iPhoneSimulator/
 gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
+gradle-wrapper.jar
 
 # Cache of project
 .gradletasknamecache
