--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=@spring.profiles.active@
 server.port=8080
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?serverTimezone=UTC
+spring.datasource.url=${{secrets.SPRING_DATASOURCE_URL}}?serverTimezone=UTC
+spring.datasource.username=${{secrets.SPRING_DATASOURCE_USERNAME}}
+spring.datasource.password=${{secrets.SPRING_DATASOURCE_PASSWORD}}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=postgres
