fix(db): edit env var

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=@spring.profiles.active@
 server.port=8080
-spring.datasource.url=${{secrets.SPRING_DATASOURCE_URL}}
-spring.datasource.username=${{secrets.SPRING_DATASOURCE_USERNAME}}
-spring.datasource.password=${{secrets.SPRING_DATASOURCE_PASSWORD}}
+spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
